--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 /** Header styles **/
 
 .header {
-  background-image: url(https://lh3.googleusercontent.com/-A0IlZRZMM78/WaAzkKp968I/AAAAAAAADhc/SH03BLB_l1wbgl3N5RHDH1oFRwUWVEixQCJoC/w663-h373-p-rw/IMG_0865.JPG);
+  background-image: url(https://lh3.googleusercontent.com/Kholw2n42eIVOyB_5f-APB7TLcjUlYP0RbfnXci-MuoWkuiOF52B6x3xUhNFmdJtIGgFkFieP2K5Uf8=w1280-h914-rw);
   height : 500px;
   background-size : cover;
   background-position: center;
