--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
  /** Header styles **/
   
   .header {
-    background-image: url(https://lh6.googleusercontent.com/gJSLLkGYsoFLpFJrBpqAu4FB6hTvK3w0-VSCVr5ENYy7vo9gwqgC-rXU5F7oEsQwXDtRDhDT88DGxXQ=w1280-h914-rw);
+    background-image: url(https://preview.ibb.co/eeY6ia/DSC07835.jpg);
  -  height : 500px;
  +  height : 700px;
     background-size : cover;
