--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
  /** Header styles **/
   
   .header {
-    background-image: url(https://preview.ibb.co/eeY6ia/DSC07835.jpg);
+    background-image: url(https://lh3.googleusercontent.com/-eO123FNX32k/AAAAAAAAAAI/AAAAAAAAAAA/APJypA0_Dt3r-3dhylcK7adpoGsy6Cv3WA/s48-c-mo/photo.jpg);
  -  height : 500px;
  +  height : 700px;
     background-size : cover;
