--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
  /** Header styles **/
   
   .header {
-    background-image: url(https://lh3.googleusercontent.com/-eO123FNX32k/AAAAAAAAAAI/AAAAAAAAAAA/APJypA0_Dt3r-3dhylcK7adpoGsy6Cv3WA/s48-c-mo/photo.jpg);
+    background-image: url(https://lh6.googleusercontent.com/vyKPPct-yTIQnGNntGo3ZkHupqR3hAF2S2O-MdwWY4ztV6FwTMTaSJMopr5RZQoWnRyv2Bm0HBXozF4=w725-h865-rw);
  -  height : 500px;
  +  height : 700px;
     background-size : cover;
