--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 nav a {
 	position: relative;
 	display: inline-block;
-	margin: 15px 25px;
+	margin: 15px;
 	outline: none;
 	color: #fff;
 	text-decoration: none;
