--- a/catalog.css
+++ b/catalog.css
@@ -121,6 +121,7 @@ h1 {
 /** List style **/
 
 h2 {
+  color: white;
   font-family: 'Raleway', sans-serif;
   font-size: 28px;
   font-weight: 500;
