--- a/members.css
+++ b/members.css
@@ -102,3 +102,10 @@ a {
   text-decoration: none;
   letter-spacing: 2px;
 }
+
+footer {
+    padding-top: 100px;
+    text-align: center;
+    color: white;
+    padding-bottom: 20px;
+}
