--- a/comment.css
+++ b/comment.css
@@ -3,11 +3,11 @@ body {
   margin: 0;
   background: #f7f7f7;
   /* Old browsers */
-  background: -moz-linear-gradient(45deg, #ffffff 0%, #596dd0 100%);
+  background: -moz-linear-gradient(45deg, #ffffff 0%, #cb80ff 100%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(45deg,#ffffff 0%, #596dd0 100%);
+  background: -webkit-linear-gradient(45deg,#ffffff 0%, #cb80ff 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(45deg, #ffffff 0%, #596dd0 100%);
+  background: linear-gradient(45deg, #ffffff 0%, #cb80ff 100%);
 }
 
 /** Header styles **/
