--- a/about.css
+++ b/about.css
@@ -12,6 +12,13 @@ body {
 
 /** Header styles **/
 
+.header {
+  background-image: url(https://i.imgur.com/0SV7izB.jpg);
+  height : 700px;
+  background-size : cover;
+  background-position: center;
+}
+
 .col-sm-8 {
     padding: 50px;
 }
